Update page about

--- a/about.html
+++ b/about.html
@@ -7,7 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Đây là trang giới thiệu 1</h1>
+  <h1>Đây là trang giới thiệu</h1>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non consequuntur officiis fugiat magni ipsam porro veniam, nemo sit nam tenetur aliquam obcaecati. Nostrum laboriosam perspiciatis maiores sapiente maxime quo quidem.</p>
+  <p>Nội dung...</p>
+  <p>Nội dung...</p>
+  <p>Nội dung...</p>
+  <p>Nội dung...</p>
 </body>
 </html>
