--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <h1>Đây là trang chủ 1</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi, ut? Fugit voluptate nobis hic voluptatum illum cupiditate porro illo minima iste. Dolorum sunt tempore ipsum quos mollitia omnis consequuntur beatae!</p>
 </body>
 </html>
